<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <ImageView
            android:layout_width="250dp"
            android:layout_height="250dp"
            android:src="@drawable/ic_brain_icon"/>

        <View
            android:layout_width="match_parent"
            android:layout_margin="20dp"
            android:layout_height="1dp"
            android:background="@color/colorAccentPink"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/menu_welcome"
            android:textSize="20dp"
            android:textColor="@color/colorBlack"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:layout_width="250dp"
            android:layout_margin="20dp"
            android:layout_height="1dp"
            android:background="@color/colorAccentPink"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/chose_difficulty"
            android:textSize="15dp"
            android:textColor="@color/colorBlack"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <RadioGroup
            android:id="@+id/difficultyGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/difficultyClassic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/classic_difficulty"
                android:onClick="sendDifficulty"/>

            <RadioButton
                android:id="@+id/difficultyHard"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hard_difficulty"
                android:onClick="sendDifficulty"/>

        </RadioGroup>

        <View
            android:layout_width="250dp"
            android:layout_margin="20dp"
            android:layout_height="1dp"
            android:background="@color/colorAccentPink"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:textColor="@color/colorAccentPale"
            android:text="@string/button_start"
            android:onClick="startGame"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>